--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ input:focus {
   color: #324b4e;
 } */
 
+/* Соц.сети в шапке сайта */
 .social-menu {
     position: relative;
     float: right;
@@ -234,15 +235,183 @@ input:focus {
     transform: scale(1.2);
 }
 
-@media (max-width: 760px) {
-    .container {
-        font-size: 18px;
-        height: 300px;
-        top: 70px;
-        width: 50%;
-    }
+/* Адаптация */
+@media (max-width: 900px) {
+    /* шапка сайта */
+.top-menu {
+    display: inline;
+}
 
-    .container p {
-        font-size: 18px;
-    }
+.top-menu:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.menu-main {
+    position: relative;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    float: right;
+    bottom: 90px;
+}
+
+.menu-main li {
+    display: inline-block;
+}
+
+.menu-main a {
+    text-decoration: none;
+    display: inline-block;
+    position: relative;
+    line-height: 61px;
+    padding: 0 9px;
+    font-size: 16px;
+    letter-spacing: 2px;
+    font-family: "Arimo", sans-serif;
+    font-weight: bold;
+    color: rgb(184, 184, 184);
+    transition: 0.3s ease;
+    right: 185px;
+    top: 20px;
+}
+
+/* Соц.сети в шапке сайта */
+.social-menu {
+    position: relative;
+    float: right;
+    bottom: 90px;
+}
+
+.social-menu a {
+    display: inline-block;
+    position: relative;
+    color: #adadad83;
+    left: 350px;
+    padding: 6px;
+    font-size: 28px;
+    transition: transform 0.3s linear;
+    top: 30px;
+}
+
+.social-menu a:hover {
+    /* color: #fff; */
+    transform: scale(1.2);
+}
+
+    /* Ocновной контейнер */
+.container {
+    display: block;
+    position: relative;
+    color: #fff;
+    height: 100%;
+}
+
+/* блок 'Сервис' */
+.box-service {
+    display: block;
+    text-align: justify;
+    font-size: 22px;
+    font-family: "Arial", sans-serif;
+    color: #0c0c0c;
+    position: relative;
+    background: #72717134;
+    box-shadow: inset 0px 0px 30px rgb(8, 8, 8);
+    height: 590px;
+    width: 70%;
+    left: 20%;
+    bottom: 50px;
+    border-radius: 10px;
+    background-image: url(service-box.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* Картинка */
+/* .key img {
+    position: relative;
+    width: 550px;
+  height: 250px;
+  float: right;
+  bottom: 370px;
+  right: 70px;
+} */
+
+/* текст */
+.box-text {
+    display: block;
+    position: relative;
+    width: 60%;
+    height: 500px;
+    margin: 0 100px;
+    text-align: center;
+    font-size: 16px;
+    color: #f8f7f7;
+    right: 150px;
+    top: 10px;
+    /* background-image: url(/image/service-box.jpeg); */
+}
+
+.box-text h2 {
+    position: relative;
+    bottom: 13px;
+    left: 150px;
+}
+
+.box-text h4 {
+    position: relative;
+    bottom: 20px;
+    left: 150px;
+}
+
+.box-text a {
+    display: block;
+    position: relative;
+    left: 146px;
+    text-decoration: none;
+    color: #e9e6e6;
+    bottom: 16px;
+    transition: transform 0.3s ease;
+}
+
+.box-text a:hover {
+    color: #fff;
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
+/* Горизонтальная линия */
+.horiz-line {
+    position: relative;
+    border-top: 3px solid #f5f4f442;
+    width: 100%;
+    left: 150px;
+    box-shadow: 1px 1px 5px rgb(163, 162, 162);
+    bottom: 15px;
+}
+
+/* Подвал сайта */
+.footer {
+    position: relative;
+    display: inline-block;
+    background: #72717110;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    top: 100px;
+}
+
+.footer a {
+    position: relative;
+    color: #adadad83;
+    transition: transform 0.3s ease;
+    top: 10px;
+    padding: 6px;
+    left: 1px;
+}
+
+.footer a :hover {
+    transform: scale(1.2);
+}
 }
